# salt

./: .gitignore  AGENT.md  Cargo.toml  FUZZCHECK_GUIDE.md  NOTICE.md  README.md  REVIEW.md  mega-reth-workspace.Cargo.toml  readme.md  rust-toolchain.toml
.cargo/: mutants.toml
.github/pages/: benchmark-chart.html
.github/scripts/: append_benchmark_history.py  export_benchmark_action_json.py  parse_cargo_bench.py  render_pr_comment.py
.github/workflows/: coverage.yml  mutation.yml  perf-baseline-bootstrap.yml  perf-benchmark.yml  perf-regression.yml  quality-reports.yml  rust.yml  spec-mutation.yml
banderwagon/: Cargo.toml  build.rs
banderwagon/fuzz/: Cargo.toml
banderwagon/fuzz/fuzz_targets/: committer_mul_index_vs_scalar_mul.rs  element_bigint_mont_equivalence.rs
banderwagon/src/: config_iter.rs  config_macro.rs  element.rs  fuzz_support.rs  lib.rs  msm.rs  platform.rs  riscv_zkvm_ops.rs  salt_committer.rs  scalar_multi_asm.rs  trait_impls.rs  zkvm_riscv32_primitives.rs
banderwagon/src/curve_ops/: generic.rs  mod.rs  x86_64.rs  zkvm_riscv32.rs
banderwagon/src/trait_impls/: ops.rs  serialize.rs
benches/: salt_trie.rs
benchmarks/: data.js  data.json  index.html  latest-main.json
coverage/: index.html
coverage/coverage/home/runner/work/salt/salt/banderwagon/src/: element.rs.html  lib.rs.html  msm.rs.html  salt_committer.rs.html  scalar_multi_asm.rs.html
coverage/coverage/home/runner/work/salt/salt/ipa-multipoint/src/: crs.rs.html  default_crs.rs.html  ipa.rs.html  lagrange_basis.rs.html  main.rs.html  math_utils.rs.html  multiproof.rs.html  transcript.rs.html
coverage/coverage/home/runner/work/salt/salt/salt/src/: constant.rs.html  empty_salt.rs.html  fuzz.rs.html  lib.rs.html  mem_store.rs.html  traits.rs.html  types.rs.html
coverage/coverage/home/runner/work/salt/salt/salt/src/proof/: prover.rs.html  salt_witness.rs.html  shape.rs.html  subtrie.rs.html  test_utils.rs.html  witness.rs.html
coverage/coverage/home/runner/work/salt/salt/salt/src/state/: hasher.rs.html  state.rs.html  updates.rs.html
coverage/coverage/home/runner/work/salt/salt/salt/src/state/ahash/: convert.rs.html  fallback.rs.html
coverage/coverage/home/runner/work/salt/salt/salt/src/trie/: node_utils.rs.html  trie.rs.html
dev/bench/: data.js  latest-main.json
ffi_interface/: Cargo.toml
ffi_interface/src/: lib.rs  serialization.rs
figures/: plot_state_updates_cost.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: salt_fuzz.rs
ipa-multipoint/: Cargo.toml  Readme.md
ipa-multipoint/benches/benchmarks/: ipa_prove.rs  ipa_verify.rs  multipoint_prove.rs  multipoint_verify.rs
ipa-multipoint/docs/: 3-vcs-divide-lagrange-basis.md
ipa-multipoint/src/: crs.rs  default_crs.rs  ipa.rs  lagrange_basis.rs  lib.rs  main.rs  math_utils.rs  multiproof.rs  transcript.rs
mutants/: README.md  suppressions.toml
mutants/operators/: README.md  canon.rules  endian.rules  trie.rules
mutants/operators/canon/: canon.rules  manifest.toml
mutants/operators/endian/: endian.rules  manifest.toml
mutants/operators/trie/: manifest.toml  trie.rules
salt/: Cargo.toml  README.md  build.rs  timetrace_batch_statistics.sh
salt-macros/: Cargo.toml
salt-macros/src/: lib.rs
salt/benches/: parents_commitments_deser.rs  salt_trie.rs
salt/benches/fixtures/: 6906405.proof  6906412.proof
salt/src/: account.rs  constant.rs  empty_salt.rs  evm_data_types.rs  formate.rs  fuzz.rs  lib.rs  mem_salt.rs  mem_store.rs  mock_evm_types.rs  traits.rs  types.rs
salt/src/proof/: mod.rs  plain_keys_proof.rs  prover.rs  salt_witness.rs  shape.rs  subtrie.rs  test_utils.rs  verifier.rs  witness.rs
salt/src/state/: hasher.rs  mod.rs  state.rs  updates.rs
salt/src/state/ahash/: NOTICE.md  convert.rs  fallback.rs  mod.rs
salt/src/trie/: mod.rs  node_utils.rs  proof.rs  trie.rs  updates.rs  witness.rs
salt/tests/: deterministic_e2e.rs  proof_fixture_codec.rs  shared_committer_init.rs  shared_committer_init_os_winner.rs
salt/tests/common/: mod.rs
scripts/: mutation_gate.py  mutation_test.sh  spec_mutation.sh  umutate.py  umutate_setup.sh
scripts/perf/: export_benchmark_action_json.py  parse_cargo_bench.py  render_pr_comment.py  render_pr_report.py  report_template.html
src/: account.rs  compat.rs  constant.rs  genesis.rs  lib.rs  log.rs  mem_salt.rs  traits.rs  types.rs  types4reth.rs
src/proof/: mod.rs  prover.rs  shape.rs  subtrie.rs  verifier.rs
src/state/: mod.rs  state.rs  updates.rs
src/trie/: mod.rs  proof.rs  trie.rs  updates.rs  witness.rs
verkle-trie/src/database/: memory_db.rs
