[package]
name = "salt"
version = "1.0.0"
edition = "2021"

[features]
default = []

[dependencies]
# alloy dependencies
alloy-genesis = "1.0.9"
alloy-primitives = { version = "1.1.2", features = ["rlp", "serde"] }
alloy-rlp = "0.3.4"

# megaeth dependencies
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git", rev = "da450f98b9b4bf1b4c8eec8f96b4501f9705c517" }
banderwagon = { git = "https://github.com/megaeth-labs/rust-salt.git", branch = "feature/par_proof" }
ffi_interface = { git = "https://github.com/megaeth-labs/rust-salt.git", branch = "feature/par_proof" }
ipa-multipoint = { git = "https://github.com/megaeth-labs/rust-salt.git", branch = "feature/par_proof" }
megaeth-ahash = { package = "ahash", git = "https://github.com/megaeth-labs/ahash.git", tag = "fallback-ahash" }

# standard dependencies
blake3 = "1.8"
bytes = "1.5"
itertools = "0.13"
modular-bitfield = "0.11.2"
once_cell = "1.19"
rayon = "1.7"
rustc-hash = "2.0"
serde = "1.0"
serde_arrays = "0.1.0"
thiserror = "1.0"
tracing = "0.1.0"

[dev-dependencies]
alloy-primitives = { version = "1.1.2", features = ["rand"] }
arbitrary = { version = "1.3", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
criterion = "0.5"
proptest = "1.4"
proptest-arbitrary-interop = "0.1.0"
proptest-derive = "0.5"
rand = "0.8.5"
serde_json = "1.0.94"
test-fuzz = "5"

[[bench]]
name = "salt_trie"
harness = false
