[package]
name = "banderwagon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ed-on-bls12-381-bandersnatch = { git = "https://github.com/megaeth-labs/algebra.git", rev = "80ca69c37f79d5d00750edc1602af81b5f456695" }
ark-ff = { git = "https://github.com/megaeth-labs/algebra.git", rev = "80ca69c37f79d5d00750edc1602af81b5f456695" }
ark-ec = { git = "https://github.com/megaeth-labs/algebra.git", rev = "80ca69c37f79d5d00750edc1602af81b5f456695" }
ark-serialize = { git = "https://github.com/megaeth-labs/algebra.git", rev = "80ca69c37f79d5d00750edc1602af81b5f456695" }

rayon = {version = "*", optional = true}
hugepage-rs = { version = "0.1.0", optional = true}

[target.'cfg(target_os = "zkvm")'.dependencies]
risc0-zkvm-platform= { version = "2.2.0", features = [
    "unstable",
    "getrandom",
] }
risc0-zkvm = { version = "3.0.3", features = [
    "heap-embedded-alloc",
    "unstable",
] }

[dev-dependencies]
hex = "0.4.3"
rand_chacha = "0.3.1"

[features]
default = ["parallel"]
parallel = ["rayon", "ark-ff/parallel", "ark-ff/asm", "ark-ec/parallel"]
std = ["ark-ff/std"]
enable-hugepages = ["hugepage-rs"]
