[package]
name = "banderwagon"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { git = "https://github.com/megaeth-labs/algebra.git", rev = "80ca69c37f79d5d00750edc1602af81b5f456695", default-features = false }
ark-ed-on-bls12-381-bandersnatch = { git = "https://github.com/megaeth-labs/algebra.git", rev = "80ca69c37f79d5d00750edc1602af81b5f456695", default-features = false }
ark-ff = { git = "https://github.com/megaeth-labs/algebra.git", rev = "80ca69c37f79d5d00750edc1602af81b5f456695", default-features = false }
ark-serialize = { git = "https://github.com/megaeth-labs/algebra.git", rev = "80ca69c37f79d5d00750edc1602af81b5f456695", default-features = false }
salt-macros = { path = "../salt-macros", default-features = false }
num-bigint = { version = "0.4", optional = true }

hugepage-rs = { version = "0.1.0", optional = true }
rayon = { version = "*", optional = true }
[dev-dependencies]
hex = "0.4.3"
rand_chacha = "0.3.1"

[build-dependencies]
cfg_aliases = "0.2"

[features]
default = ["parallel"]
std = [
    "ark-ed-on-bls12-381-bandersnatch/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-serialize/std",
]
parallel = [
    "std",
    "dep:rayon",
    "salt-macros/parallel",
    "ark-ff/parallel",
    "ark-ff/asm",
    "ark-ec/parallel",
]
enable-hugepages = ["std", "dep:hugepage-rs"]
zkvm-riscv32-sim = ["std", "dep:num-bigint"]
