[package]
name = "ipa-multipoint"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
banderwagon = { path = "../banderwagon", default-features = false}
itertools = { version = "0.10.1", default-features = false, features = ["use_alloc"] }
sha2 = { version = "0.9.8", default-features = false }
rayon = {version = "*", optional = true}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0", default-features = false }

rustc-hash = { version = "2.1.0", default-features = false }

[dev-dependencies]
criterion = "0.5.1"
rand_chacha = { version = "0.3.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }


[[bin]]
name = "ipa-multipoint"
path = "src/main.rs"
required-features = ["std"]

[[bench]]
name = "benchmark_main"
harness = false

[features]
default = ["std", "parallel"]
parallel = ["rayon", "banderwagon/parallel"]
std = [
    "banderwagon/std",
    "itertools/use_std",
    "sha2/std",
    "hex/std",
    "thiserror/std",
    "rustc-hash/std"
]
