[package]
name = "salt"
version = "1.0.0"
edition = "2021"

[dependencies]
# megaeth dependencies
banderwagon = { path = "../banderwagon" , default-features = false}
ipa-multipoint = { path = "../ipa-multipoint" , default-features = false}

# standard dependencies
auto_impl = "1"
blake3 = { version = "1.8", default-features = false }
derive_more = { version = "2", default-features = false, features = ["full"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
#once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
rayon = {version = "*", optional = true}
rustc-hash = { version = "2.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_arrays = "0.2"
spin = { version = "0.10", default-features = false, features = ["rwlock", "lazy"] }
thiserror = { version = "2.0", default-features = false }
zerocopy = { version = "0.7", default-features = false, features = ["derive"] }
hashbrown = { version = "0.16", features = ["inline-more", "serde"] }

[dev-dependencies]
ark-ff = "0.5.0"
bincode = { version = "2.0", features = ["serde"] }
criterion = "0.7"
rand = "0.9"
serde_json = "1.0.94"

[features]
default = ["std", "parallel"]
test-bucket-resize = ["parallel", "std"]
parallel = ["rayon", "banderwagon/parallel", "ipa-multipoint/parallel"]
std = [
    "serde/std",
    "hex/std",
    "rustc-hash/std",
    "thiserror/std",
    "banderwagon/std",
    "ipa-multipoint/std",
]

[[bench]]
name = "salt_trie"
harness = false
