[package]
name = "salt"
version = "1.0.0"
edition = "2021"

[features]
default = ["parallel"]
test-bucket-resize = ["parallel"]
parallel = ["rayon", "banderwagon/parallel", "ipa-multipoint/parallel"]
std = ["banderwagon/std", "ipa-multipoint/std"]

[dependencies]
# megaeth dependencies
banderwagon = { path = "../banderwagon" , default-features = false}
ipa-multipoint = { path = "../ipa-multipoint" , default-features = false}

# standard dependencies
auto_impl = "1"
blake3 = "1.8"
derive_more = { version = "2", default-features = false, features = ["full"] }
hex = "0.4"
once_cell = "1.19"
rayon = {version = "*", optional = true}
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.2"
thiserror = "2.0"
zerocopy = { version = "0.7", features = ["derive"] }

[dev-dependencies]
ark-ff = "0.5.0"
bincode = { version = "2.0", features = ["serde"] }
criterion = "0.7"
rand = "0.9"
serde_json = "1.0.94"

[[bench]]
name = "salt_trie"
harness = false
