[package]
name = "salt"
version = "1.0.1"
edition = "2021"

[features]
default = ["parallel"]
std = [
    "banderwagon/std",
    "ipa-multipoint/std",
    "blake3/std",
    "serde/std",
]
parallel = ["std", "dep:rayon", "salt-macros/parallel", "ipa-multipoint/parallel", "banderwagon/parallel"]
test-bucket-resize = []
enable-hugepages = ["std", "banderwagon/enable-hugepages"]

[dependencies]
salt-macros = { path = "../salt-macros", default-features = false }
banderwagon = { path = "../banderwagon", default-features = false }
ipa-multipoint = { path = "../ipa-multipoint", default-features = false }

# standard dependencies
auto_impl = { version = "1", default-features = false }
blake3 = { version = "1.8", default-features = false }
derive_more = { version = "2", default-features = false, features = ["full"] }
hashbrown = { version = "0.16", features = ["serde"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rayon = { version = "*", optional = true }
rustc-hash = { version = "2.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_arrays = { version = "0.2", default-features = false }
spin = { version = "0.10", default-features = false, features = ["rwlock", "lazy"] }
thiserror = { version = "2.0", default-features = false }
zerocopy = { version = "0.7", default-features = false, features = ["derive"] }

[dev-dependencies]
ark-ff = "0.5.0"
bincode = { version = "2.0", features = ["serde"] }
criterion = "0.7"
rand = "0.9"
serde_json = "1.0.94"

[[bench]]
name = "salt_trie"
harness = false
